// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should be able to render union types and should log expected output to console 1`] = `
Array [
  "type AdditionalProperty struct {
  AdditionalPropertyOneOf_0
  AdditionalPropertyOneOf_1
  string
  float64
  ModelinaArrType []string
  ModelinaArrType []Union
  AdditionalPropertyOneOf_6
}",
]
`;

exports[`Should be able to render union types and should log expected output to console 2`] = `
Array [
  "type Union struct {
  string
  float64
  ModelinaAnyType interface{}
}",
]
`;

exports[`Should be able to render union types and should log expected output to console 3`] = `
Array [
  "type AdditionalPropertyOneOf_6 struct {
  string
  float64
  bool
}",
]
`;

exports[`Should be able to render union types and should log expected output to console 4`] = `
Array [
  "",
]
`;

exports[`Should be able to render union types and should log expected output to console 5`] = `
Array [
  "type AdditionalPropertyOneOf_0 struct {
  Ref string
  AdditionalProperties map[string]interface{}
}",
]
`;

exports[`Should be able to render union types and should log expected output to console 6`] = `
Array [
  "type AdditionalPropertyOneOf_1 struct {
  Id string
  AdditionalProperties map[string]interface{}
}",
]
`;
